tests/typing/good/testfile-override-5.scala

class A { def m[T](x:T):T = x }
class B extends A { override def m[U](x:U):U = x }
object Main { def main(args: Array[String]) { } }
