tests/typing/bad/testfile-override-3.scala

class A { def m(x: Int) { } }
class B extends A { override def m(x: Int) : Int = 0 }
object Main { def main(args: Array[String]) { } }
